--- a/index.html
+++ b/index.html
@@ -7,43 +7,157 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap');
-        :root { --pink: #ff0055; --neon: #00ff88; --gold: #ffd700; --cyan: #00d4ff; --glass: rgba(255, 255, 255, 0.08); }
+        
+        :root { 
+            --pink: #ff0055; --neon: #00ff88; --gold: #ffd700; --cyan: #00d4ff; 
+            --glass: rgba(255, 255, 255, 0.08); 
+        }
+
+        /* 1. SELECTION & TOUCH LOCK */
         * { user-select: none; -webkit-user-select: none; touch-action: manipulation; -webkit-tap-highlight-color: transparent; }
-        body, html { margin: 0; padding: 0; width: 100%; height: 100%; font-family: 'Montserrat', sans-serif; color: white; background: #000; overflow: hidden; }
-        .bg-wallpaper { position: fixed; inset: 0; background: url('https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?q=80&w=1080&auto=format&fit=crop') no-repeat center center; background-size: cover; z-index: -2; }
-        .bg-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); backdrop-filter: blur(8px); z-index: -1; }
-        .header { text-align: center; padding: 30px 0 15px; }
-        .logo { font-family: 'Orbitron'; font-size: 35px; color: #fff; text-shadow: 0 0 20px var(--pink); margin: 0; }
-        .hub-content { flex: 1; overflow-y: auto; width: 100%; display: flex; flex-direction: column; align-items: center; padding-bottom: 100px; -webkit-overflow-scrolling: touch; }
-        .profile-card { background: var(--glass); border: 2px solid var(--neon); border-radius: 20px; padding: 12px 20px; width: 85%; max-width: 500px; display: flex; align-items: center; gap: 15px; margin-bottom: 20px; backdrop-filter: blur(15px); }
-        .avatar { font-size: 30px; border: 2px solid var(--neon); border-radius: 50%; width: 55px; height: 55px; display: flex; align-items: center; justify-content: center; background: #000; }
-        .grid { display: grid; grid-template-columns: 1fr; gap: 15px; width: 90%; max-width: 500px; }
-        .card { background: var(--glass); border: 1px solid rgba(255,255,255,0.1); border-radius: 25px; padding: 20px; text-align: left; text-decoration: none; color: white; display: flex; align-items: center; gap: 15px; }
+
+        body, html { 
+            margin: 0; padding: 0; width: 100%; height: 100%; 
+            font-family: 'Montserrat', sans-serif; color: white; 
+            background: #000; overflow: hidden; 
+        }
+
+        /* 2. REALISTIC 3D SPACE BACKGROUND */
+        .bg-wallpaper {
+            position: fixed; inset: 0; 
+            background: url('https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?q=80&w=1080&auto=format&fit=crop') no-repeat center center;
+            background-size: cover; z-index: -2;
+        }
+        .bg-overlay { 
+            position: fixed; inset: 0; 
+            background: radial-gradient(circle, transparent 20%, rgba(0,0,0,0.9) 100%); 
+            backdrop-filter: blur(10px); z-index: -1; 
+        }
+
+        /* 3. HEADER */
+        .header { text-align: center; padding: 25px 0 10px; }
+        .logo { font-family: 'Orbitron'; font-size: 35px; color: #fff; text-shadow: 0 0 20px var(--pink); margin: 0; letter-spacing: 2px; }
+        .studio-label { font-size: 10px; color: var(--neon); letter-spacing: 8px; display: block; font-weight: 900; }
+
+        .hub-content {
+            flex: 1; overflow-y: auto; width: 100%; display: flex; flex-direction: column; 
+            align-items: center; padding-bottom: 100px; -webkit-overflow-scrolling: touch;
+        }
+
+        /* 4. PILOT CARD */
+        .profile-card { 
+            background: var(--glass); border: 2px solid var(--neon); border-radius: 20px; 
+            padding: 15px 20px; width: 88%; max-width: 500px; display: flex; align-items: center; 
+            gap: 15px; margin-bottom: 20px; backdrop-filter: blur(20px);
+            box-shadow: 0 0 20px rgba(0, 255, 136, 0.1);
+        }
+        .avatar { font-size: 30px; border: 2px solid var(--neon); border-radius: 50%; width: 55px; height: 55px; display: flex; align-items: center; justify-content: center; background: #000; box-shadow: 0 0 15px var(--neon); }
+
+        /* 5. GRID LAYOUT */
+        .grid { display: grid; grid-template-columns: 1fr; gap: 15px; width: 92%; max-width: 500px; }
+        
+        .card { 
+            background: var(--glass); border: 1px solid rgba(255,255,255,0.1); border-radius: 25px; 
+            padding: 18px 20px; text-align: left; text-decoration: none; color: white; 
+            display: flex; align-items: center; gap: 15px; transition: 0.3s;
+            backdrop-filter: blur(12px);
+        }
+        .card:active { transform: scale(0.97); background: rgba(255,255,255,0.05); }
+
         .card-space { border-left: 5px solid var(--cyan); }
-        .status-badge { font-size: 8px; background: rgba(0,212,255,0.2); padding: 3px 8px; border-radius: 10px; color: var(--cyan); font-weight: 900; }
-        .ticker-wrap { position: fixed; bottom: 0; width: 100%; background: #000; border-top: 2px solid var(--cyan); padding: 10px 0; z-index: 100; }
-        .ticker { display: flex; white-space: nowrap; animation: marquee 40s linear infinite; color: var(--cyan); font-size: 10px; font-weight: 900; }
+        .card-jewel { border-left: 5px solid var(--gold); }
+        .card-tetris { border-left: 5px solid var(--neon); }
+        .card-candy { border-left: 5px solid var(--pink); }
+
+        .icon-box { font-size: 35px; flex-shrink: 0; }
+        .status-badge { font-size: 8px; background: rgba(255,255,255,0.1); padding: 3px 8px; border-radius: 10px; color: var(--cyan); font-weight: 900; letter-spacing: 1px; }
+
+        /* 6. BOTTOM TICKER */
+        .ticker-wrap { 
+            position: fixed; bottom: 0; width: 100%; background: #000; 
+            border-top: 2px solid var(--cyan); padding: 12px 0; z-index: 100; 
+        }
+        .ticker { display: flex; white-space: nowrap; animation: marquee 35s linear infinite; color: var(--cyan); font-size: 10px; font-weight: 900; letter-spacing: 1px; }
         @keyframes marquee { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
     </style>
 </head>
 <body>
-    <div class="bg-wallpaper"></div><div class="bg-overlay"></div>
-    <div class="header"><h1 class="logo">BZ247</h1><span style="font-size:10px; color:var(--neon); letter-spacing:8px;">COMMAND CENTER</span></div>
+
+    <div class="bg-wallpaper"></div>
+    <div class="bg-overlay"></div>
+
+    <div class="header">
+        <h1 class="logo">BZ247</h1>
+        <span class="studio-label">COMMAND CENTER</span>
+    </div>
+
     <div class="hub-content">
         <div class="profile-card">
             <div class="avatar">👨‍✈️</div>
-            <div><h2 style="margin:0; font-family:'Orbitron'; font-size:14px;">COMMANDER WASEEM</h2><p style="font-size:8px; color:var(--neon); margin:2px 0;">RANK: ELITE PILOT | LVL 12</p></div>
+            <div>
+                <h2 style="margin:0; font-family:'Orbitron'; font-size:15px; letter-spacing:1px;">COMMANDER WASEEM</h2>
+                <p style="font-size:8px; color:var(--neon); margin:4px 0; font-weight: 900;">RANK: ELITE PILOT | LVL 12</p>
+            </div>
         </div>
+
         <div class="grid">
-            <a href="space-shootar.html" class="card card-space">
-                <div style="font-size:35px;">🚀</div>
-                <div><span class="status-badge">MISSION ACTIVE</span><h3 style="margin:5px 0 0;">SPACE VANGUARD</h3><p style="font-size:9px; color:#888;">DRAGON BOSS & ALIEN WAR</p></div>
+            <a href="space-shootar.html" class="card card-space" onclick="playBeep()">
+                <div class="icon-box">🚀</div>
+                <div>
+                    <span class="status-badge">MISSION ACTIVE</span>
+                    <h3 style="margin:5px 0 0; font-size: 18px;">SPACE VANGUARD</h3>
+                    <p style="font-size:9px; color:#aaa;">DRAGON BOSS & ALIEN WARFARE</p>
+                </div>
                 <div style="margin-left:auto; color:var(--cyan);">▶</div>
             </a>
-            <a href="jewel.html" class="card" style="border-left:5px solid var(--gold);"><div style="font-size:35px;">💎</div><div><h3>ROYAL GEMS</h3><p style="font-size:9px; color:#888;">3D GEMS PUZZLE</p></div></a>
-            <a href="tetris.html" class="card" style="border-left:5px solid var(--neon);"><div style="font-size:35px;">🧱</div><div><h3>CYBER GRID</h3><p style="font-size:9px; color:#888;">NEON TACTICAL DEFENSE</p></div></a>
+
+            <a href="jewel.html" class="card card-jewel" onclick="playBeep()">
+                <div class="icon-box">💎</div>
+                <div>
+                    <h3 style="margin:0; font-size: 18px;">ROYAL GEMS</h3>
+                    <p style="font-size:9px; color:#aaa;">3D DRAG & DROP PUZZLE</p>
+                </div>
+                <div style="margin-left:auto; color:var(--gold);">▶</div>
+            </a>
+
+            <a href="tetris.html" class="card card-tetris" onclick="playBeep()">
+                <div class="icon-box">🧱</div>
+                <div>
+                    <h3 style="margin:0; font-size: 18px;">CYBER GRID</h3>
+                    <p style="font-size:9px; color:#aaa;">NEON TACTICAL DEFENSE</p>
+                </div>
+                <div style="margin-left:auto; color:var(--neon);">▶</div>
+            </a>
+
+            <a href="candy.html" class="card card-candy" onclick="playBeep()">
+                <div class="icon-box">🍭</div>
+                <div>
+                    <h3 style="margin:0; font-size: 18px;">CANDY MAFIA</h3>
+                    <p style="font-size:9px; color:#aaa;">3D ACTION SURVIVAL</p>
+                </div>
+                <div style="margin-left:auto; color:var(--pink);">▶</div>
+            </a>
         </div>
     </div>
-    <div class="ticker-wrap"><div class="ticker">⚠️ WARNING: ALIEN SIGNAL DETECTED ... STAGE 2 UNLOCKED AFTER DRAGON DEFEAT ... 🚀 COMMANDER WASEEM PREPARE FOR DEPLOYMENT ...</div></div>
+
+    <div class="ticker-wrap">
+        <div class="ticker">
+            ⚠️ WARNING: ALIEN SIGNAL DETECTED ... STAGE 2 UNLOCKED AFTER DRAGON DEFEAT ... 🚀 COMMANDER WASEEM PREPARE FOR DEPLOYMENT ... 🎖️ MISSION STATUS: 100% OPERATIONAL ...
+        </div>
+    </div>
+
+    <script>
+        let aCtx;
+        function playBeep() {
+            if(!aCtx) aCtx = new (window.AudioContext || window.webkitAudioContext)();
+            if (aCtx.state === 'suspended') aCtx.resume();
+            let o = aCtx.createOscillator(), g = aCtx.createGain();
+            o.type = 'sine'; o.frequency.setValueAtTime(800, aCtx.currentTime);
+            g.gain.setValueAtTime(0.05, aCtx.currentTime);
+            o.connect(g); g.connect(aCtx.destination);
+            o.start(); o.stop(aCtx.currentTime + 0.1);
+            if(navigator.vibrate) navigator.vibrate(25);
+        }
+    </script>
 </body>
 </html>
